--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -1,4 +1,48 @@
 #contact {
-    /* background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%); */
-    background-image: linear-gradient(120deg, #fa709a 0%, #fee140 100%);
+    min-height: 100vh;
+    display: flex;
+    padding: 0;
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    /* background-image: linear-gradient(120deg, #fa709a 0%, #fee140 100%); */
   }
+
+  #contact .container {
+margin: auto;
+}
+
+#contact .container .row {
+        
+}
+
+#contact .container .row .card{
+    border-radius: 10px;
+    padding: 0;
+    display: grid;
+    width: 65%;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.card > .illustration {
+
+}
+
+.card > .content {
+    text-align: center;
+    padding: 24px;
+    margin: 0;
+}
+
+.content  .single-input > input {
+    height: 50px;
+    border-radius: 10px;
+    outline: none;
+    padding: 10px;
+    background: ghostwhite;
+    border: 1px solid gainsboro;
+}
+
+
+.form-button button {
+    width: 100%;
+}
