--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -23,9 +23,11 @@ margin: auto;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
-.card > .illustration {
-
+.card > .illustration > img {
+    width: 100%;
+    height: 100%;
 }
+
 
 .card > .content {
     text-align: center;
