--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -7,7 +7,7 @@
           <div class="hero-content-wrapper">
             <!--<h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">&nbsp;</h2>-->
             <!--<h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">&nbsp;</h2>-->
-            <h4 class="wow fadeInUp" data-wow-delay=".2s">Bienvenue sur votre espace d'inscription</h4>
+            <h4 class="wow fadeInUp title" data-wow-delay=".2s">Bienvenue sur votre espace d'inscription</h4>
 
             <div class="buttons justify-content-center">
               <a [routerLink]="['/register']" rel="nofollow" class="button button-lg radius-10 wow fadeInUp"
